# wch_cmake

cmake/: FindCMSIS.cmake  FindSPL.cmake  wch_gcc.cmake
cmake/ch32/: common.cmake  devices.cmake  linker_ld.cmake  utilities.cmake  v0.cmake  v2.cmake
examples/cmsis_blink/: CMakeLists.txt
examples/cmsis_blink/src/: main.c
examples/spl_blink/: CMakeLists.txt
examples/spl_blink/src/: main.c
